2012-09-23  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Other Customization Variables): CHECK_HTMLXREF
	not set by default; other tweaks.

2012-09-21  Karl Berry  <karl@gnu.org>

	* tp/tests/parser_tests.sh,
	* tp/tests/run_parser_all.sh: export var=val not portable.

2012-09-21  Karl Berry  <karl@gnu.org>

	* doc/refcard/Makefile (ccheck, vcheck): pass txi_check_args
	(from environment), for my cron.
	* doc/refcard/ccheck: recognize --no-common to output only problems.
	* doc/refcard/vcheck: likewise, and omit OUTPUT_PERL_ENCODING from
	check.
	* doc/texinfo.txi (Other Customization Variables): document
	remaining variables.

2012-09-15  Patrice Dumas  <pertusus@free.fr>

	* doc/texinfo.txi (texi2any Output Customization): remove 
	anything related to API description, put it in 
	draft_api.texi, it is not stable enough for now.

2012-09-15  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Print with @code{lpr}),
	(Format with @code{texi2dvi}),
	(@code{@@pagesizes}): use @code in node names.

2012-09-14  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Inline Conditionals): rename from Inline
	Conditional Commands.
	(Testing for Texinfo Commands): new node describing
	@ifcommanddefined, @ifcommandnotdefined, txicommandconditionals.
	* doc/refcard/txicmdcheck: handle checking for them.
	* doc/refcard/txirefcard.tex: list them.
	* NEWS: likewise.

2012-09-13  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Macro Details): yet more sticky points
	regarding commas and multiple-argument macros.
	Mail from Patrice, 25 Jul 2012 10:21:28.

2012-09-13  Patrice Dumas  <pertusus@free.fr>

	* doc/refcard/txivarcheck (read_tp): filter out customization 
	variables that are internal for the Parser and documented
	in the Parser, and variables that may only be set in
	init files as they are arrays or hashes.

2012-09-12  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\markupsetuplqkbd, \markupsetuprqkbd):
	use \markupsetcodequoteleft and right, like all the others.