@@ -1,3 +1,8 @@
+2012-10-23  Akim Demaille  <akim@lrde.epita.fr>
+
+	* util/gendocs.sh (-I): new option, passed along to the tools.
+	(mail of 23 Oct 2012 16:27:19)
+
 2012-09-23  Karl Berry  <karl@gnu.org>
 
 	* doc/texinfo.txi (Other Customization Variables): CHECK_HTMLXREF
